[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "unit-db-test"
authors = [
    {name = "@cortze | Mikel Cortes ", email = "cortze@protonmail.com"},
]
description = "Unittest wrapper focused on making DB integrity tests"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
dynamic = ["version", "dependencies"]

[tool.setuptools_scm]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
Repository = "https://github.com/cortze/unit-db-test"

[tool.setuptools.packages.find]
include = [
  "unit_db_test*",
]